# CG25-26

./: README.md  teste.txt
Fase1/: CMakeLists.txt
Fase1/Testes Fase1/projetocg/generator/: CMakeLists.txt  generator.cpp
Fase1/engine/: CMakeLists.txt  engine.cpp
Fase1/generator/: CMakeLists.txt  main.cpp
Fase2/: CMakeLists.txt
Fase2/engine/: engine.cpp  tinyxml2.cpp
Fase2/generator/: main.cpp
Fase2/test_files_phase_2/: box_2_3.3d  sistema_solar.xml
Fase3/: CMakeLists.txt
Fase3/engine/: engine.cpp
Fase3/generator/: main.cpp
Fase3/models_generated/: bezier_10.3d  plane.3d  ring.3d  sphere.3d  teapot.3d
Fase3/test_files_phase_2/: sistema_solar.xml  sphere_1_8_8.3d
Fase4/: CMakeLists.txt
Fase4/engine/: engine.cpp
Fase4/generator/: main.cpp
Fase4/models_generated/: box.3d  cone.3d  plane.3d  ring.3d  sphere.3d  teapot.3d
Fase4/test_files_phase_2/: sistema_solar.xml
